syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;

message AddDonaturBukuReq{
    string Kd_DonaturBuku=1;
    string Nama_DonaturBuku=2;
    string Status=3;
    // string email=4;
    // string gender=5;
    // string callbackPhone=6;
    // int32 status=7;
}

message ReadDonaturBukuByKd_DonaturBukuReq{
    string mobile=1;
}

message ReadDonaturBukuByKd_DonaturBukuResp{
    string Kd_DonaturBuku=1;
    string Nama_DonaturBuku=2;
    string Status=3;
    // string mobile=4;
    // string email=5;
    // string gender=6;
    // string callbackPhone=7;
    // int32 status=8;
}


message ReadDonaturBukuResp{
    repeated ReadDonaturBukuByKd_DonaturBukuResp allDonaturBuku=1;
}

message UpdateDonaturBukuReq{
    string Kd_DonaturBuku=1;
    string Nama_DonaturBuku=2;
    string Status=3;
    // string mobile=4;
    // string email=5;
    // string gender=6;
    // string callbackPhone=7;
    // int32 status=8;
}

message ReadDonaturBukuByNama_DonaturBukuReq{
    string Nama_DonaturBuku=1;
}

message ReadDonaturBukuByNama_DonaturBukuResp{
    string Kd_DonaturBuku=1;
    string Nama_DonaturBuku=2;
    string Status=3;
    // string mobile=4;
    // string email=5;
    // string gender=6;
    // string callbackPhone=7;
    // int32 status=8;
}

service DonaturBukuService{
    rpc AddDonaturBuku(AddDonaturBukuReq) returns (google.protobuf.Empty) {};
    rpc ReadDonaturBukuByKd_DonaturBuku(ReadDonaturBukuByKd_DonaturBukuReq) returns (ReadDonaturBukuByKd_DonaturBukuResp) {};
    rpc ReadDonaturBuku(google.protobuf.Empty) returns (ReadDonaturBukuResp){};
    rpc UpdateDonaturBuku(UpdateDonaturBukuReq) returns (google.protobuf.Empty){};
    rpc ReadDonaturBukuByNama_DonaturBuku(ReadDonaturBukuByNama_DonaturBukuReq) returns (ReadDonaturBukuByNama_DonaturBukuResp){};
}